fiattachment bug fix